--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #111;
   min-height: 50vh;
   display: flex;
   flex-direction: column;
@@ -22,7 +22,6 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  margin-bottom: 2rem;
 }
 
 .App-link {
